GRAMMAR.ebnf
metadata = { "{!", identifier, text, "}" } ;

identifier = ? html tag name or css class name ? ; 

text = { ? any character ? } ;

outline-block = "[" , attributes , [ ";" , body ] ,"]" ;

inline-block = "<" , attributes , [ ";" , para ] , ">" ;

plugin-outline-block = "[@" , identifier , ";" , body , "]" ;

plugin-inline-block = "<@" , identifier , ";" , para , ">" ; 

attributes = [ [ "!" , identifier | identifier ] , { "." , identifier } ] ;

body = [ body-item , { "\n" , body-item } ] ;

body-item = 
         para
       | metadata, outline-block
       | metadata, section-break
       ;

section-break =
         "===" , { "=" }
       | "---" , { "-" } 
       | "<<<" , { "<" }
       | ">>>" , { ">" }
       ;

para = narration , [ "=" , dialog , { "=" , narration } ] ;
dialog = { metadata, text | para-item } ;
narration = { metadata, text | para-item } ;

para-item = 
         metadata, inline-block
       | metadata, emphasis ;

emphasis =
         "***" , para, "***"
       | "**" , para, "**"
       | "*" , para, "*"
       | "_" , para, "_"
       | "~" , para, "~"
       | "$" , para, "$"
       ;

file = outline-block ;
